[fix] scrollbar gallery

--- a/src/components/GalleryProject/GalleryProject.css
+++ b/src/components/GalleryProject/GalleryProject.css
@@ -9,7 +9,7 @@
     background: linear-gradient( #0000 0%, #ffffff1a 100%)
 }
 
-::-webkit-scrollbar {
+.gallery-project::-webkit-scrollbar {
     display: none;
 }
 
